# sendme

./: README.md  pyproject.toml  start_receiver.sh
sendme/: app.py  index.htmlx
tests/: test_api.py
